# rulesmaker

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_OLD.md  README_UPDATED.md  README_new.MD  STATUS.md  config.example.yaml  cursor_generation_report.json  cursor_generation_summary.json  demo_engine_state.json  integrated_cursor_generation_report.json  pipeline_report.json  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  smart_organizer.py  test2.err  test_config.yaml  test_ml_processor.py  test_sources.yml  test_status.py  test_transformers.py  urls.txt
.cursor/: DOCUMENTATION.md  README.md
config/: intelligent_taxonomy.yaml  ml_batch_config.yaml
data/: prediction_history.json  query_history.json
demo_output/: README.md  learning_report.json
docs/: COMPREHENSIVE_NEXTJS_PIPELINE_PLAN.md  IMPLEMENTATION_PROGRESS.md  ML_INTEGRATION_IMPLEMENTATION.md  NEXTJS_PIPELINE_GUIDE.md  cli-commands.md
examples/: README.md  __init__.py  basic_usage.py  batch_processing_demo.py  bedrock_diagnostic.py  bedrock_rules_example.py  bench_async.py  check_aws_env.py  cli_usage.py  fixed_batch_processing_demo.py  intelligent_enhancement_demo.py  minimal_bedrock_test.py  ml_integration_demo.py  nova_client.py  nova_test.py  phase1_implementation.py  run_nova_client_local.py  run_with_csv_creds.sh  run_with_csv_diagnostic.py  simple_bedrock_test.py  test_different_models.py
rm/: pyvenv.cfg
rules_out/: fastapi.tiangolo.com_.cursor  huggingface.co_docs_transformers_index.cursor  javascript.info_.cursor  ollama.com_.cursor  react.dev_learn.cursor  vuejs.org_guide_.cursor  www.anthropic.com_.cursor  www.boto3.amazonaws.com_v1_documentation_api_latest_index.html.cursor  www.click.com_.cursor  www.django-rest-framework.org_.cursor  www.djangoproject.com_.cursor  www.fake-useragent.com_.cursor  www.gatsbyjs.com_.cursor  www.httpx.com_.cursor  www.jsonschema.com_.cursor  www.nuxtjs.org_.cursor  www.openai.com_.cursor  www.pytorch.org_.cursor  www.scikit-learn.org_stable_.cursor  www.sentence-transformers.net_.cursor  www.svelte.dev_.cursor  www.sveltekit.dev_.cursor  www.tensorflow.org_.cursor  www.transformers.ai_.cursor  www.typescriptlang.org_.cursor  www.vuejs.org_guide_.cursor
rulesmaker-mirror.git/: config  packed-refs
scripts/: comprehensive_nextjs_pipeline.py  create_comprehensive_cursor_rules.py  create_integrated_cursor_rules.py  create_simple_cursor_rules.py  demo_nextjs_pipeline.py  fix_cursor_rules_formatting.py  fix_markdown.py  get_aws_session.sh  list_bedrock_models.sh  nextjs_docs_pipeline.py  save_session_to_env.sh  self_reward_batch.py  simple_nextjs_pipeline.py  test_nextjs_pipeline.py
sorted/: MANIFEST.json  README.md
src/: sources.yml
tests/: test_basic_cursor_rules.py  test_batch_processing.py  test_bedrock_concurrency.py  test_cache_budget.py  test_cli_ml_integration.py  test_cli_templates.py  test_cursor_rule_transformer_enhancements.py  test_cursor_rules_integration.py  test_fallback.py  (+12 more)
(+720 files in other folders)
